--- a/public/form.css
+++ b/public/form.css
@@ -1,22 +1,20 @@
 
-.inputLayerDiv{
-    display: grid;
-    grid-auto-flow: row;
-    width: min-content;
-    border: lightslategray solid 0.1em;
-    padding: 1em;
-    margin: 0.5em 0;
+#mainForm{
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 
-.inputElementAdd{
-    width: 2em;
-    grid-row: 2;
-    margin-bottom: 1em;
-    margin-left: 2em;
+#jsonArea{
+    display: block;
+    width: 90%;
+    height: 75vh;
+    margin: 0 auto;
 }
 
-.inputElementDiv{
-    margin-left: 2em;
-    display: grid;
-    grid-template-columns: min-content min-content;
+#submit{
+    width: 90%;
+    display: block;
+    height: 4em;
+    margin: 0 auto;
 }
