--- a/public/deviceControl.css
+++ b/public/deviceControl.css
@@ -14,6 +14,19 @@
    column-gap: 1em;
  }
 
+.advancedControls{
+  margin: 2em auto;
+  width: max-content;
+  display: grid;
+  column-gap: 1em;
+  grid-template-columns: auto auto;
+  row-gap: 0.5em;
+}
+
+.advancedControls button{
+  grid-column: span 2;
+}
+
  button{
    margin: 0.2em auto;
  }
