--- a/public/form.css
+++ b/public/form.css
@@ -2,19 +2,20 @@
 #mainForm{
     width: 100%;
     height: 100%;
-    display: block;
+    display: grid;
+    grid-template-rows: auto 3em;
 }
 
 #jsonArea{
     display: block;
     width: 90%;
-    height: 70vh;
+    height: 72vh;
     margin: 0 auto;
 }
 
 #submit{
-    width: 90%;
+    width: 80%;
     display: block;
-    height: 4em;
+    height: 100%;
     margin: 0 auto;
 }
