--- a/public/index.css
+++ b/public/index.css
@@ -1,13 +1,19 @@
 
 main{
-    margin-top: 5vh;
+    margin: auto;
+    border: 1px solid gray;
+    border-radius: 0.5em;
+    max-width: 30em;
+    padding: 2em 4em;
+    margin-top: 7%;
 }
 
 .actionDiv{
     border: 0.1em solid gray;
     background-color: white;
-    max-width: 80vw;
+    max-width: 27em;
     margin: 0.5em auto;
+    border-radius: 0.5em;
 }
 
 .actionDiv:hover{
