--- a/public/deviceControl.css
+++ b/public/deviceControl.css
@@ -1,33 +1,70 @@
  
- main{
-   margin-top: 20vh
- }
+ 
+.deviceInfo{
+  display: grid;
+  grid-auto-rows: min-content;
+  height: min-content;
+  row-gap: 0.4em;
+  margin-top: 4em;
+} 
 
- #deviceId{
-   text-align: center;
- }
+.deviceInfo *{
+  padding: 0;
+  margin: 0;
+}
 
- .deviceControl{
-   margin: 0 auto;
-   width: max-content;
+#deviceName{
+  font-size: 2em;
+}
+
+#deviceId{
+  text-align: center;
+}
+ 
+.deviceControls{
+   margin: 2% auto 0 auto;
    display: grid;
-   column-gap: 1em;
- }
+   width: max-content;
+   grid-template-columns: 1fr 1fr;
+   column-gap: 2em;
+}
+
+.deviceControls > div{
+  border: 0.2px solid gray;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 1.6em;
+}
+
+.mainControls{
+  display: grid;
+  grid-auto-rows: max-content;
+}
+
+.mainControls > button{
+  width: 100%;
+}
 
 .advancedControls{
-  margin: 2em auto;
-  width: max-content;
   display: grid;
   column-gap: 1em;
   grid-template-columns: auto auto;
   row-gap: 0.5em;
 }
 
+.deviceControl{
+  margin: 0 auto;
+  display: grid;
+  column-gap: 1em;
+  width: 100%;
+}
+
 .advancedControls button{
   grid-column: span 2;
 }
 
- button{
-   margin: 0.2em auto;
- }
+button{
+  margin: 0.2em auto;
+  width: 100% !important;
+}
  
