--- a/program/public/deviceControl.css
+++ b/program/public/deviceControl.css
@@ -1,11 +1,20 @@
  
  
+.mainContent{
+  background-color: #ffffffdd;
+  border-radius: 1em;
+  width: fit-content;
+  margin: 2em auto 0 auto;
+  padding: 3em;
+}
+
+
 .deviceInfo{
   display: grid;
-  grid-auto-rows: min-content;
+  grid-auto-rows: min-content min-content;
+  grid-template-columns: auto auto;
   height: min-content;
   row-gap: 0.4em;
-  margin-top: 4em;
 } 
 
 .deviceInfo *{
@@ -15,10 +24,14 @@
 
 #deviceName{
   font-size: 2em;
+  text-align: left;
+}
+
+.otherDeviceInfo{
+  margin-top: 0.4em;
 }
 
 #deviceId{
-  text-align: center;
 }
  
 .deviceControls{
